--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -142,7 +142,7 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		window.location = SITE_INDEX+'/kongguan'+str;
+		window.location = SITE_INDEX+'Chanpin/kongguan'+str;
 		//window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
